blogPostDescriptions are rendering, and blogPostItems are being decorated

--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -10,7 +10,7 @@
   text-align: center;
   align-items: center;
   margin: none;
-  padding: none;
+  padding-bottom: 10px;
   font-family: "Candal", sans-serif;
   font-size: 5rem;
   font-weight: 200;
@@ -32,7 +32,7 @@
   display: flex;
   justify-content: space-around;
   border-bottom: whitesmoke 5px solid;
-  padding: 20px 0px;
+  padding: 10px 0px;
 }
 .navbar-links a {
   color:
