--- a/src/styles/blogItem.scss
+++ b/src/styles/blogItem.scss
@@ -1,7 +1,26 @@
 .blogItem {
-  display: flex;
-  flex-direction: column;
-}
+  display: grid;
+  grid-template-rows: 50px 30px 1fr;
+  background-color: rgba(0,0,0,0.2);
+  width:300px;
+  padding: 15px;
+  border: rgba(255, 4, 180, 0.885) solid .5px;
+  border-radius: 10%;
+  box-shadow: 0 10px 15px rgba(0,0,0,0.4);
+  // opacity: 0.3;
+
+  &:hover{
+    transition: ease-out .5s;
+    box-shadow: 0 15px 20px rgba(0,0,0,0.6);
+    border: rgba(255, 4, 180, 0.885) solid .8px;
+  }
+    &:hover .blogItem-readMore{
+      transition: ease-in-out 1s;
+      color: rgba(255, 4, 180);
+      font-size: 20px;
+    }
+  }
+
 
 // .blogItem cover{
 //     width: 100%;
@@ -12,22 +31,53 @@
 // }
 
 .blogItem h3 {
+  grid-row: 1;
   margin: 0.5rem 0 1rem 0;
+  font-size: 20px;
+  text-align: center;
   // flex: 1;
 }
 
-.blogItem-description {
-  position: relative;
-  max-height: 50px;
-  overflow: hidden;
-  font-size: 0.8rem;
-  padding-right: 0.6rem;
-  color: #a9a9a9;
+.blogItem-readMore{
+  grid-row: 2;
+  text-align: center;
+  font-size: 18px;
+  text-decoration: none;
+  color: #848edc;
+  padding: 5px;
+  border-radius: 0%;
+  background-color: rgba(255, 255, 255, 0.1);
+  width: auto;
 }
 
-.blogItem-description::before {
-  position: absolute;
-  content: "...";
-  bottom: 0;
-  right: 0;
+// .blogItem-description {
+//   position: relative;
+//   max-height: 50px;
+//   overflow: hidden;
+//   font-size: 0.8rem;
+//   padding-right: 0.6rem;
+//   color: #a9a9a9;
+// }
+
+// .blogItem-description::before {
+//   position: absolute;
+//   content: "...";
+//   bottom: 0;
+//   right: 0;
+// }
+.blogItem-footer{
+  grid-row: 3;
+  display: grid;
+  grid-template-columns: 1.5fr 2fr;
+
+
+&-author{
+  grid-column: 1;
+}
+
+&-date{
+  grid-column: 2;
+  align-self: center;
+
+}
 }
