--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,7 +12,8 @@ html {
   margin: none;
   color: white;
   font-family: "Source Sans Pro", sans-serif;
-  background: linear-gradient(135deg, #000000 0%, #0b0612 46%, #382160 100%);
+  background: linear-gradient(135deg, #5348aa 0%, #382160 100%);
+  // background: linear-gradient(135deg, #000000 0%, #0b0612 46%, #382160 100%);
   height: 100%;
   // background-repeat: no-repeat;
   // background-size: 100%;
