--- a/src/styles/blogItem.scss
+++ b/src/styles/blogItem.scss
@@ -1,26 +1,20 @@
 .blogItem {
   display: grid;
-  grid-template-rows: 50px 30px 1fr;
-  background-color: rgba(0,0,0,0.2);
-  width:300px;
+  background-color: rgba(0, 0, 0, 0.2);
+  width: 300px;
+  height: 200px;
   padding: 15px;
-  border: rgba(255, 4, 180, 0.885) solid .5px;
+  border: #99acf1 solid 0.5px;
   border-radius: 10%;
-  box-shadow: 0 10px 15px rgba(0,0,0,0.4);
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.4);
   // opacity: 0.3;
 
-  &:hover{
-    transition: ease-out .5s;
-    box-shadow: 0 15px 20px rgba(0,0,0,0.6);
-    border: rgba(255, 4, 180, 0.885) solid .8px;
+  &:hover {
+    transition: ease-out 0.5s;
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.6);
+    border: #99acf1 solid 0.8px;
   }
-    &:hover .blogItem-readMore{
-      transition: ease-in-out 1s;
-      color: rgba(255, 4, 180);
-      font-size: 20px;
-    }
-  }
-
+}
 
 // .blogItem cover{
 //     width: 100%;
@@ -35,12 +29,13 @@
   margin: 0.5rem 0 1rem 0;
   font-size: 20px;
   text-align: center;
-  // flex: 1;
+  align-self: center;
 }
 
-.blogItem-readMore{
+.blogItem-readMore {
   grid-row: 2;
   text-align: center;
+  align-self: center;
   font-size: 18px;
   text-decoration: none;
   color: #848edc;
@@ -48,6 +43,12 @@
   border-radius: 0%;
   background-color: rgba(255, 255, 255, 0.1);
   width: auto;
+
+  &:hover {
+    transition: ease-in-out 1s;
+    color: rgba(255, 4, 180);
+    font-size: 20px;
+  }
 }
 
 // .blogItem-description {
@@ -65,19 +66,19 @@
 //   bottom: 0;
 //   right: 0;
 // }
-.blogItem-footer{
+.blogItem-footer {
   grid-row: 3;
   display: grid;
   grid-template-columns: 1.5fr 2fr;
+  font-size: 15px;
+  align-items: center;
+  justify-items: center;
 
+  &-author {
+    grid-column: 1;
+  }
 
-&-author{
-  grid-column: 1;
-}
-
-&-date{
-  grid-column: 2;
-  align-self: center;
-
-}
+  &-date {
+    grid-column: 2;
+  }
 }
