--- a/src/styles/blogList.scss
+++ b/src/styles/blogList.scss
@@ -1,17 +1,18 @@
 .blogList {
-  display: grid;
-  grid-template-columns: repeat (3, 1fr);
-  grid-gap: 3rem;
+  display: flex;
+  flex-direction: row;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
 }
 
 @media (max-width: 768px) {
   .blogList {
-    grid-template-columns: repear(2, 1fr);
+    // grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media (max-width: 600px) {
   .blogList {
-    grid-template-columns: repear(1, 1fr);
+    // grid-template-columns: repeat(1, 1fr);
   }
 }
