--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 .navigation-container {
   margin: 0;
 }
@@ -10,9 +12,11 @@
   text-align: center;
   align-items: center;
   margin: none;
-  padding-bottom: 10px;
-  font-family: "Candal", sans-serif;
-  font-size: 5rem;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  // font-family: "Candal", sans-serif;
+  font-family: "Seaweed Script", cursive;
+  font-size: 6rem;
   font-weight: 200;
 
   color: white;
@@ -32,15 +36,13 @@
   display: flex;
   justify-content: space-around;
   border-bottom: whitesmoke 5px solid;
-  padding: 10px 0px;
+  padding: 7px 0px;
 }
 .navbar-links a {
-  color:
-  //  #381d7c;
-    #4623f7;
+  color: #4623f7;
   text-decoration: none;
   font-family: "Source Sans Pro", sans-serif;
-  font-size: 30px;
+  font-size: 25px;
   padding: 10px;
   transition: ease-in 0.3s;
   will-change: transform;
@@ -50,73 +52,11 @@
     color: #45349c;
     font-size: 28px;
     border-radius: 20%;
-    text-shadow: 0 0 0.125em hsl(0, 0%, 100% / 0.3), 0 0 0.45em currentColor;
+    text-shadow: 0 0 0.125em hsl(0, 0%, math.div(100%, 0.3)),
+      0 0 0.45em currentColor;
     box-shadow: inset 0 0 0.5e, 0 currentColor, 0 0 0.5em 0 currentColor;
   }
 }
 
-// // bottom blur effect
-// neon-button {
-//   font-size: 4rem;
-//   display: inline-block;
-//   cursor: pointer;
-//   text-decoration: none;
-//   color: currentColor;
-//   border: currentColor 0.125em solid;
-//   padding: 0.25em 1em;
-//   border-radius: 0.25em;
-
-//   text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;
-
-//   box-shadow: inset 0 0 0.5em 0 currentColor, 0 0 0.5em currentColor;
-
-//   position: relative;
-
-//   transition: background-color 100ms linear;
-// }
-
-// neon-button::before {
-//   pointer-events: none;
-//   content: "";
-//   position: absolute;
-//   background: currentColor;
-//   top: 120%;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
-
-//   transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
-//   filter: blur(1em);
-//   opacity: 0.7;
-// }
-
-// .neon-button::after {
-//   content: "";
-//   position: absolute;
-//   top: 0;
-//   bottom: 0;
-//   left: 0;
-//   right: 0;
-//   background: green;
-//   box-shadow: 0 0 1em 0.5em currentColor;
-//   text-shadow: none;
-//   transition: opacity 100ms linear;
-// }
-
-// // becomes more intense on hover
-// neon-button:hover,
-// neon-button:focus {
-//   background: currentColor;
-//   color: white; //a darker color
-//   text-shadow: none;
-// }
-
-// neon-button:hover::before,
-// neon-button:focus::before {
-//   opacity: 1;
-// }
-
-// neon-button:hover::after,
-// neon-button:focus::after {
-//   opacity: 1;
-// }
+@media (max-width: 1000px) {
+}
